src/objects/AMS_Agency_Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AMS Agency Affiliations</relationshipLabel>
        <relationshipName>AMS_Agency_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <referenceTo>AMS_Affiliation__c</referenceTo>
        <relationshipLabel>AMS Agency Affiliations</relationshipLabel>
        <relationshipName>AMS_Agency_Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>AMS_Agency__c</referenceTo>
        <relationshipLabel>AMS Agency Affiliations</relationshipLabel>
        <relationshipName>AMS_Agency_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_synchronization__c</fullName>
        <label>Last synchronization</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_System__c</fullName>
        <label>Legacy System</label>
        <picklist>
            <picklistValues>
                <fullName>AIMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webstar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AMS Agency Affiliation</label>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>AMS Agency Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMS Agency Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>